--- a/.gitignore
+++ b/.gitignore
@@ -157,3 +157,10 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+.gitignore
+dev-diff_history.iml
+vcs.xml
+profiles_settings.xml
+misc.xml
+modules.xml
+.DS_Store
